Making the display more responsive

--- a/form.html
+++ b/form.html
@@ -131,7 +131,7 @@
               type="number"
               id="adults"
               name="adults"
-              placeholder="Amount"
+              placeholder="Enter number of adults"
               required
             />
           </div>
@@ -141,7 +141,7 @@
             type="number"
             id="childs"
             name="childs"
-            placeholder="Amount"
+            placeholder="Enter number of childs"
             required
             />
           </div>
