--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Relax & Recharge with our luxury rooms</p>
+            <p>Relax & Recharge with our luxury rooms</p>
             <a href="#about" class="buttons">View More</a>
         </div>
         <img src="images/luxuryHotel.jpg" style="width: 100%; height: 100%;">
@@ -49,7 +49,7 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Here are some room recommendations <br>
+            <p>Here are some room recommendations <br>
                 from luxury hotels</p>
             <a href="#recomen" class="buttons">View More</a>
         </div>
@@ -59,7 +59,7 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Here are some famous individuals who have <br>
+            <p>Here are some famous individuals who have <br>
                 reviewed this luxury hotel</p>
             <a href="#review" class="buttons">View More</a>
         </div>
