--- a/ourteam.html
+++ b/ourteam.html
@@ -42,8 +42,8 @@
 		<div class="team-content">
 			<div class="box">
 				<img src="images/arya.jpg" >
-				<h3>M. Rizki Arya Rifai</h3>
-				<h5>Project Leader</h5>
+				<h3>Muhammad Rizki Arya Rifai</h3>
+				<h5>Project Leader Capstone</h5>
 				<div class="icons">
 					<a href="https://www.linkedin.com/in/mrizkiaryarifai?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
 					<a href="https://instagram.com/rizki.arya6?igshid=OGQ5ZDc2ODk2ZA"><i class="fab fa-instagram"></i></i></a>
