--- a/facilities.html
+++ b/facilities.html
@@ -76,7 +76,7 @@
 
          <div class="card__article">
             <h2>Dining Room</h2>
-            <img src="images/diningR.jpg" alt="image" class="card__img">
+            <img src="images/diningRoom.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <p class="card__title"><b style="padding-right: 5px;">Location:</b>2nd Floor</p>
