--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
 <!-- Start FAQ -->
 <div class="accordion">
     <div class="image-box">
-      <img src="images/Faq.png" alt="">
+      <img src="images/faq.png" alt="">
     </div>
     <div class="accordion-text">
       <div class="title">FAQ</div>
