--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 from luxury hotels</p>
             <a href="#recomen" class="buttons">View More</a>
         </div>
-        <img src="images/Executive Legendary.jpg" style="width: 100%; height: 100%;">
+        <img src="images/executiveLegendary.jpg" style="width: 100%; height: 100%;">
     </div>
     
     <div class="wrapper-main">
@@ -103,7 +103,7 @@
 
     <div class="box-recomen">
         <div class="box">
-            <img src="images/Executive Spesial.jpg" alt="">
+            <img src="images/executiveSpecial.jpg" alt="">
             <h3>Executive Spesial</h3>
             
             <p class="price">
@@ -117,7 +117,7 @@
         </div>
 
         <div class="box">
-            <img src="images/Executive Epic.jpg" alt="">
+            <img src="images/executiveEpic.jpg" alt="">
             <h3>Executive Epic</h3>
 
             <p class="price">
@@ -131,7 +131,7 @@
         </div>
 
         <div class="box">
-            <img src="images/Executive Legendary.jpg" alt="">
+            <img src="images/executiveLegendary.jpg" alt="">
             <h3>Executive Legendary</h3>
 
             <p class="price">
