--- a/rooms.html
+++ b/rooms.html
@@ -51,7 +51,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Deluxe Basic.jpg" alt="room-image">
+                <img src="images/deluxeBasic.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="basic">Deluxe Basic</h3>
@@ -81,7 +81,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Deluxe Common.jpg" alt="room-image">
+                <img src="images/deluxeCommon.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="common">Deluxe Common</h3>
@@ -111,7 +111,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Deluxe Rare.jpg" alt="room-image">
+                <img src="images/deluxeRare.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="rare">Deluxe Rare</h3>
@@ -149,7 +149,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Executive Spesial.jpg" alt="room-image">
+                <img src="images/executiveSpecial.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="spesial">Executive Spesial</h3>
@@ -179,7 +179,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Executive Epic.jpg" alt="room-image">
+                <img src="images/executiveEpic.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="epic">Executive Epic</h3>
@@ -209,7 +209,7 @@
         <!-- Start Per Room -->
         <article class="room">
             <div class="room-image">
-                <img src="images/Executive Legendary.jpg" alt="room-image">
+                <img src="images/executiveLegendary.jpg" alt="room-image">
             </div>
             <div class="room-text">
                 <h3 id="legendary">Executive Legendary</h3>
