--- a/ourteam.html
+++ b/ourteam.html
@@ -94,7 +94,7 @@
 			</div>
 
             <div class="box">
-				<img src="images/sintia.jpg">
+				<img src="images/anis.jpg">
 				<h3>Anis Sintia</h3>
 				<h5>Back End Engineer</h5>
 				<div class="icons">
