--- a/facilities.html
+++ b/facilities.html
@@ -8,28 +8,29 @@
     <link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-</head>
+    
 
+</head>
 <body>
 <!-- Header Start -->
 <header>
-   <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
+    <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
 
-   <div>
-     <ul id="navbar">
-         <li><a class="active" href="index.html">Home</a></li>
-         <li><a href="rooms.html">Rooms</a></li>
-         <li><a href="facilities.html">Facilities</a></li>
-         <li><a href="faq.html">Faq</a></li>
-         <li><a href="ourteam.html">Our Teams</a></li>
-         <!-- <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li> -->
-         <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
-     </ul>
-   </div>
-   <div id="mobile">
-     <!-- <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
-     <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
-   </div>
+    <div>
+      <ul id="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="rooms.html">Rooms</a></li>
+          <li><a href="facilities.html">Facilities</a></li>
+          <li><a href="faq.html">Faq</a></li>
+          <li><a href="ourteam.html">Our Team</a></li>
+          <li><a href="history.html"><i class="fas fa-book-open"></i></a></li>
+          <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
+      </ul>
+    </div>
+    <div id="mobile">
+        <a href="history.html"><i class="fas fa-book-open"></i></a>
+        <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
+    </div>
 </header>
 <!-- End Header -->
   
