--- a/faq.html
+++ b/faq.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Hotel</title>
     <link rel="stylesheet" href="css/faq.css">
-	<link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
+    <link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-</head>
+    
 
+</head>
 <body>
 <!-- Header Start -->
 <header>
@@ -22,13 +23,13 @@
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
           <li><a href="ourteam.html">Our Team</a></li>
-          <!-- <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li> -->
+          <li><a href="history.html"><i class="fas fa-book-open"></i></a></li>
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
     </div>
     <div id="mobile">
-      <!-- <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
-      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
+        <a href="history.html"><i class="fas fa-book-open"></i></a>
+        <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
     </div>
 </header>
 <!-- End Header -->
@@ -128,6 +129,9 @@
     <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
+
+<!-- Link JavaScript -->
 <script src="js/faq.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
