--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
           <li><a href="ourteam.html">Our Team</a></li>
-          <!-- <li><a id="login" href="login/login.html"><i class="fas fa-user"></i></a></li> -->
+          <li><a href="history.html"><i class="fas fa-book-open"></i></a></li>
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
     </div>
     <div id="mobile">
-      <!-- <a href="login/login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
-      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
+        <a href="history.html"><i class="fas fa-book-open"></i></a>
+        <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
     </div>
 </header>
 <!-- End Header -->
@@ -273,6 +273,9 @@
     <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
+
+<!-- Link Javascript -->
 <script src="js/script.js"></script>    
+<script src="js/nav.js"></script>    
 </body>
 </html>
