--- a/history.html
+++ b/history.html
@@ -52,12 +52,12 @@
         <tr id="getForm" class="tr">
             <td class="th">Rizki Arya</td>
             <td class="th">RizkiArya@gmail.com</td>
-            <td class="th">1</td>
-            <td class="th">1</td>
-            <td class="th">1</td>
-            <td class="th">1</td>
-            <td class="th">1</td>
-            <td class="th">1</td>
+            <td class="th">085770459586</td>
+            <td class="th">Executive Legendary</td>
+            <td class="th">12-12-2023</td>
+            <td class="th">12-13-2023</td>
+            <td class="th">2</td>
+            <td class="th">4</td>
         </tr>
     </tbody>
 </table>
