update and update

--- a/form.html
+++ b/form.html
@@ -95,7 +95,7 @@
 
         <!-- Start Buttons to Reciept -->
         <div class="buttons">
-          <button type="submit" onclick="sendBooking()" class="btnText" id="konfirmasiBtn" value="submit">
+          <button type="submit" class="btnText" id="konfirmasiBtn" value="submit">
             Booking Room 
           </button>
         </div>
