--- a/history.html
+++ b/history.html
@@ -48,16 +48,16 @@
             <th class="th">Childs</th>
         </tr>
     </thead>
-    <tbody>
-        <tr id="getForm" class="tr">
-            <td class="th">Rizki Arya</td>
+    <tbody id="getForm">
+        <!-- <tr id="getForm" class="tr"> -->
+            <!-- <td class="th">Rizki Arya</td>
             <td class="th">RizkiArya@gmail.com</td>
             <td class="th">085770459586</td>
             <td class="th">Executive Legendary</td>
             <td class="th">12-12-2023</td>
             <td class="th">12-13-2023</td>
             <td class="th">2</td>
-            <td class="th">4</td>
+            <td class="th">4</td> -->
         </tr>
     </tbody>
 </table>
