End update history

--- a/history.html
+++ b/history.html
@@ -35,6 +35,9 @@
 <!-- End Header -->
 
 <!-- Start History -->
+<div class="center">
+    <h1>Booking History</h1>
+</div>
 <table class="table">
     <thead class="thead">
         <tr class="tr">
